fix right- and left-aligned images

--- a/style.scss
+++ b/style.scss
@@ -1178,16 +1178,6 @@ ul.nav-menu .focus > ul,
 	font-size: 16px;
 }
 
-.entry-content img.alignleft,
-.entry-content .wp-caption.alignleft {
-	margin-left: -60px;
-}
-
-.entry-content img.alignright,
-.entry-content .wp-caption.alignright {
-	margin-right: -60px;
-}
-
 footer.entry-meta {
 	margin-top: 24px;
 }
